objects/TopBoxWG__TopBox_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>TopBoxWG__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Customer_Field_Name__c</fullName>
        <label>Customer Field Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Direction__c</fullName>
        <label>Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To TopBox</fullName>
                    <default>true</default>
                    <label>To TopBox</label>
                </value>
                <value>
                    <fullName>From TopBox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Object_Type__c</fullName>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>TopBox_Feedback__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Field_Name__c</fullName>
        <label>TopBox Field Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TopBox Field Mapping</label>
    <listViews>
        <fullName>TopBoxWG__TopBox_Field_Mappings_Account_View</fullName>
        <columns>TopBoxWG__Active__c</columns>
        <columns>TopBoxWG__Is_Test__c</columns>
        <columns>TopBoxWG__Object_Type__c</columns>
        <columns>MasterLabel</columns>
        <columns>TopBoxWG__Direction__c</columns>
        <columns>TopBoxWG__TopBox_Field_Name__c</columns>
        <columns>TopBoxWG__Customer_Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TopBoxWG__Object_Type__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>TopBox Field Mappings Account View</label>
    </listViews>
    <listViews>
        <fullName>TopBoxWG__TopBox_Field_Mappings_Contact_View</fullName>
        <columns>TopBoxWG__Active__c</columns>
        <columns>TopBoxWG__Is_Test__c</columns>
        <columns>TopBoxWG__Object_Type__c</columns>
        <columns>MasterLabel</columns>
        <columns>TopBoxWG__Direction__c</columns>
        <columns>TopBoxWG__TopBox_Field_Name__c</columns>
        <columns>TopBoxWG__Customer_Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TopBoxWG__Object_Type__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>TopBox Field Mappings Contact View</label>
    </listViews>
    <listViews>
        <fullName>TopBoxWG__TopBox_Field_Mappings_View</fullName>
        <columns>TopBoxWG__Active__c</columns>
        <columns>TopBoxWG__Is_Test__c</columns>
        <columns>TopBoxWG__Object_Type__c</columns>
        <columns>MasterLabel</columns>
        <columns>TopBoxWG__Direction__c</columns>
        <columns>TopBoxWG__TopBox_Field_Name__c</columns>
        <columns>TopBoxWG__Customer_Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>TopBox Field Mappings View</label>
    </listViews>
    <pluralLabel>TopBox Field Mappings</pluralLabel>
</CustomObject>